[metadata]
name = python-adjutant
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = An admin task workflow service for openstack.
description-file = package_readme.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://opendev.org/openstack/adjutant
project_urls =
    Bug Tracker = https://storyboard.openstack.org/#!/project/openstack/adjutant
    Documentation = https://adjutant.readthedocs.io/en/latest/
    Source Code = https://opendev.org/openstack/adjutant
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Framework :: Django :: 1.11
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Environment :: OpenStack

keywords =
    openstack
    keystone
    users
    tasks
    registration
    workflow

[build_sphinx]
builders = html, man
source-dir = doc/source
build-dir = doc/build
all-files = 1
warning-is-error = 1

[entry_points]
console_scripts =
    adjutant-api = adjutant:management_command
