[metadata]
name = python-adjutant
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = An admin task workflow service for openstack.
description-file = package_readme.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://opendev.org/openstack/adjutant
project_urls =
    Bug Tracker = https://storyboard.openstack.org/#!/project/openstack/adjutant
    Documentation = https://docs.openstack.org/adjutant/latest/
    Source Code = https://opendev.org/openstack/adjutant
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Framework :: Django :: 2.2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: OpenStack

keywords =
    openstack
    keystone
    users
    tasks
    registration
    workflow

[files]
packages =
    adjutant

[entry_points]
console_scripts =
    adjutant-api = adjutant:management_command

adjutant.feature_sets =
    core = adjutant.core:AdjutantCore
