[metadata]
name = python-adjutant
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = An admin task workflow service for openstack.
description_file = package_readme.rst
description_content_type = text/x-rst; charset=UTF-8
home_page = https://opendev.org/openstack/adjutant
project_urls =
    Bug Tracker = https://storyboard.openstack.org/#!/project/openstack/adjutant
    Documentation = https://docs.openstack.org/adjutant/latest/
    Source Code = https://opendev.org/openstack/adjutant
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Framework :: Django :: 3.2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: OpenStack

keywords =
    openstack
    keystone
    users
    tasks
    registration
    workflow

[files]
packages =
    adjutant

[entry_points]
console_scripts =
    adjutant-api = adjutant:management_command

adjutant.feature_sets =
    core = adjutant.core:AdjutantCore
